@@ -26,7 +26,7 @@ $cfg = {
 	
 	# hadoop values
 	'hadoopdir'   => $ENV{'PH_CLUSTER'},
-        'hcat_data_dir'  => '/user/hcat/test/data',
+        'hcat_data_dir'  => ("$ENV{'PH_HDFS_BASE'}" || '/user/hcat').'/test/data',
 
 	# db values
 # 	'dbuser' => 'pigtester',
